--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,7 +14,11 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
         <item name="android:navigationBarColor">@color/black</item>
         <!-- Customize your theme here. -->
-    </style>
 
+
+
+    </style>
+    <color name="button_normal">#070707</color>
+    <color name="button_pressed">#333333</color>
     <color name="colorText">@color/white</color>
 </resources>
