--- a/app/src/main/res/layout/activity_ecran_fin.xml
+++ b/app/src/main/res/layout/activity_ecran_fin.xml
@@ -41,11 +41,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/trolltext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_weight="0"
+        android:fontFamily="sans-serif-thin"
+        android:paddingTop="10px"
+        android:text="C'est parti !"
+        android:textAlignment="center"
+        android:textColor="#FFCD17"
+        android:textSize="48sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <VideoView
         android:id="@+id/videoView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
+        android:layout_marginTop="100dp"
         android:layout_weight="1"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
