--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:fontFamily="sans-serif-thin"
         android:text="_XxJustinDu13xX_"
         android:textAlignment="textEnd"
         android:textColor="@color/colorText"
@@ -21,34 +22,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="200dp"
-        android:layout_height="2dp"
-        android:background="@color/button_normal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
     <TableLayout
         android:id="@+id/tableLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="200dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.29000002">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:weightSum="1">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button10"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
-                android:layout_margin="30dp"
+                android:layout_margin="15dp"
                 android:layout_weight="0.5"
                 android:background="@drawable/button"
                 android:onClick="goto_jeu1"
@@ -60,7 +55,7 @@
 
                 android:layout_width="0dp"
                 android:layout_height="100dp"
-                android:layout_margin="30dp"
+                android:layout_margin="15dp"
                 android:layout_weight="0.5"
                 android:background="@drawable/button"
                 android:onClick="goto_calc"
@@ -69,48 +64,41 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="137dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:weightSum="1">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button101"
+                android:id="@+id/button1013"
                 style="@style/Widget.AppCompat.Button.Borderless"
 
                 android:layout_width="0dp"
                 android:layout_height="100dp"
-                android:layout_margin="30dp"
-                android:layout_weight="0.5"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
                 android:background="@drawable/button"
-                android:onClick="goto_win"
-                android:text="Win" />
+                android:onClick="goto_wide"
+                android:text="Troll" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button111"
-                style="@style/Widget.AppCompat.Button.Borderless"
-
-                android:layout_width="0dp"
-                android:layout_height="100dp"
-                android:layout_margin="30dp"
-                android:layout_weight="0.5"
-                android:background="@drawable/button"
-                android:onClick="goto_lose"
-                android:text="Lose" />
         </TableRow>
 
     </TableLayout>
 
     <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:id="@+id/imageButton2"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/button"
         android:onClick="goto_settings"
         android:padding="10dp"
+        android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_preferences" />
+        app:srcCompat="@drawable/hamburger" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
