--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.TestApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+
+
         <!-- Primary brand color. -->
+
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/black</item>
@@ -9,16 +13,24 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="android:background">#12121A</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
         <item name="android:navigationBarColor">@color/black</item>
         <!-- Customize your theme here. -->
-
-
+        <item name="android:windowAnimationStyle">@style/anim</item>
 
     </style>
-    <color name="button_normal">#232323</color>
-    <color name="button_pressed">#333333</color>
-    <color name="colorText">@color/white</color>
+    <style name="anim" parent="@android:style/Animation.Activity">
+        <item name="android:windowActivityTransitions">true</item>
+        <item name="android:activityOpenEnterAnimation">@anim/in_right</item>
+        <item name="android:activityOpenExitAnimation">@anim/out_left</item>
+        <item name="android:activityCloseEnterAnimation">@anim/in_left</item>
+        <item name="android:activityCloseExitAnimation">@anim/out_right</item>
+    </style>
+    <color name="button_normal">#3A3A4C</color>
+    <color name="button_pressed">#434358</color>
+    <color name="colorText">#FAFAFF</color>
+
 </resources>
