--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,5 +100,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/hamburger" />
 
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="0dp"
+        android:layout_height="64dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="64dp"
+            android:layout_marginBottom="48dp"
+            app:srcCompat="@drawable/logo_shadow" />
+    </com.google.android.material.navigation.NavigationView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
