--- a/app/src/main/res/layout/activity_ecran_fin.xml
+++ b/app/src/main/res/layout/activity_ecran_fin.xml
@@ -77,7 +77,8 @@
         android:id="@+id/scoretext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginStart="280dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
