--- a/app/src/main/res/layout/activity_ecran_fin.xml
+++ b/app/src/main/res/layout/activity_ecran_fin.xml
@@ -13,6 +13,7 @@
         android:layout_gravity="end"
         android:layout_marginTop="100dp"
         android:layout_weight="1"
+        android:elevation="0dp"
         android:focusableInTouchMode="false"
         android:onClick="next"
         android:visibility="invisible"
@@ -27,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_weight="0"
+        android:elevation="1dp"
         android:fontFamily="sans-serif-thin"
         android:paddingTop="10px"
         android:text="Bravo !"
@@ -45,6 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_weight="0"
+        android:elevation="1dp"
         android:fontFamily="sans-serif-thin"
         android:paddingTop="10px"
         android:text="Essaie encore !"
@@ -62,6 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_weight="0"
+        android:elevation="1dp"
         android:fontFamily="sans-serif-thin"
         android:paddingTop="10px"
         android:text="C'est parti !"
