--- a/app/src/main/res/layout/activity_ecran_fin.xml
+++ b/app/src/main/res/layout/activity_ecran_fin.xml
@@ -9,15 +9,14 @@
     <VideoView
         android:id="@+id/videoView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="end"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
         android:layout_weight="1"
         android:elevation="0dp"
         android:focusableInTouchMode="false"
         android:onClick="next"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,10 +24,10 @@
     <TextView
         android:id="@+id/wintext"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginTop="50dp"
         android:layout_weight="0"
-        android:elevation="1dp"
+        android:elevation="10dp"
         android:fontFamily="sans-serif-thin"
         android:paddingTop="10px"
         android:text="Bravo !"
@@ -36,7 +35,7 @@
         android:textColor="#8DFF5E"
         android:textSize="48sp"
         android:textStyle="normal"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,7 +43,7 @@
     <TextView
         android:id="@+id/losetext"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginTop="50dp"
         android:layout_weight="0"
         android:elevation="1dp"
@@ -62,7 +61,7 @@
     <TextView
         android:id="@+id/trolltext"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginTop="50dp"
         android:layout_weight="0"
         android:elevation="1dp"
@@ -81,10 +80,10 @@
         android:id="@+id/scoretext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="280dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:textAlignment="textEnd"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
