--- a/app/src/main/res/layout/activity_calculatrice.xml
+++ b/app/src/main/res/layout/activity_calculatrice.xml
@@ -4,12 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="Onclick"
-    tools:context=".Calculatrice">
-
+    tools:context=".CalculatriceActivity">
 
     <TableLayout
-        android:id="@+id/tableLayout"
+        android:id="@+id/tableLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -24,50 +22,66 @@
             android:layout_height="match_parent"
             android:weightSum="1">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button1"
-                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
+                android:layout_margin="4dp"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:background="@drawable/button"
                 android:fontFamily="monospace"
+                android:onClick="buttonclick"
                 android:text="1"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:typeface="sans" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button2"
+                android:background="@drawable/button"
+                android:layout_margin="4dp"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
                 android:fontFamily="monospace"
-                android:onClick="onCli"
+                android:onClick="buttonclick"
                 android:text="2"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:typeface="sans" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button3"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
                 android:fontFamily="monospace"
+                android:onClick="buttonclick"
                 android:text="3"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:typeface="sans" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/buttondiv"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.4"
                 android:fontFamily="monospace"
+                android:onClick="buttonclick"
                 android:text="÷"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
@@ -80,49 +94,69 @@
             android:layout_height="match_parent"
             android:weightSum="1">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button4"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
                 android:fontFamily="monospace"
+                android:onClick="buttonclick"
                 android:text="4"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:typeface="sans" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button5"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
                 android:fontFamily="monospace"
+                android:onClick="buttonclick"
                 android:text="5"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:typeface="sans" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button6"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
                 android:fontFamily="monospace"
+                android:onClick="buttonclick"
                 android:text="6"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:typeface="sans" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/buttonmult"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.4"
                 android:fontFamily="monospace"
+                android:onClick="buttonclick"
                 android:text="×"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
@@ -135,49 +169,69 @@
             android:layout_height="match_parent"
             android:weightSum="1">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button7"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
                 android:fontFamily="monospace"
+                android:onClick="buttonclick"
                 android:text="7"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:typeface="sans" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button8"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
                 android:fontFamily="monospace"
+                android:onClick="buttonclick"
                 android:text="8"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:typeface="sans" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button9"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
                 android:fontFamily="monospace"
+                android:onClick="buttonclick"
                 android:text="9"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:typeface="sans" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/buttonadd"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.4"
                 android:fontFamily="monospace"
+                android:onClick="buttonclick"
                 android:text="+"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
@@ -190,92 +244,193 @@
             android:layout_height="match_parent"
             android:weightSum="1">
 
-            <Button
-                android:id="@+id/buttondel"
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttondot"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
                 android:fontFamily="monospace"
-                android:onClick="lose"
-                android:text="Del"
-                android:textColor="#F44336"
+                android:onClick="buttonclick"
+                android:text="."
+                android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:typeface="sans" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button0"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
                 android:fontFamily="monospace"
-                android:onClick="OnCLICKZERO"
+                android:onClick="buttonclick"
                 android:text="0"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:typeface="sans" />
 
-            <Button
-                android:id="@+id/buttonok"
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonpow"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
                 android:fontFamily="monospace"
-                android:onClick="win"
-                android:text="OK"
-                android:textColor="#8BC34A"
+                android:onClick="buttonclick"
+                android:text="^"
+                android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:typeface="sans" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/buttonsub"
+                android:background="@drawable/button"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.4"
                 android:fontFamily="monospace"
+                android:onClick="buttonclick"
                 android:text="-"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:typeface="sans" />
 
         </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:weightSum="1">
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonCE"
+                android:background="@drawable/button"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.2"
+                android:fontFamily="monospace"
+                android:onClick="buttonCE"
+                android:text="CE"
+                android:textColor="#03A9F4"
+                android:textSize="24sp"
+                android:typeface="sans" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttondel"
+                android:background="@drawable/button"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.2"
+                android:fontFamily="monospace"
+                android:onClick="buttonDEL"
+                android:text="Del"
+                android:textColor="#F44336"
+                android:textSize="24sp"
+                android:typeface="sans" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonok"
+                android:background="@drawable/button"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_margin="4dp"
+
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.2"
+                android:fontFamily="monospace"
+                android:onClick="buttonOK"
+                android:text="OK"
+                android:textColor="#8BC34A"
+                android:textSize="24sp"
+                android:typeface="sans" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonfac"
+                android:background="@drawable/button"
+                android:layout_margin="4dp"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.4"
+                android:fontFamily="monospace"
+                android:onClick="buttonclick"
+                android:text="!"
+                android:textColor="@color/colorText"
+                android:textSize="24sp"
+                android:typeface="sans" />
+
+        </TableRow>
     </TableLayout>
+
+    <TextView
+        android:id="@+id/resultat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="212dp"
+        android:fontFamily="cursive"
+        android:rotation="0"
+        android:rotationX="0"
+        android:rotationY="0"
+        android:textAlignment="center"
+        android:textColor="#0E3CE3"
+        android:textSize="60sp"
+        android:textStyle="bold"
+        android:typeface="sans"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/calcul"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="108dp"
-        android:layout_weight="0"
         android:fontFamily="sans-serif-black"
-        android:text="3x12"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#000000"
         android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@id/tableLayout"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultat"
+        app:layout_constraintVertical_bias="0.544" />
 
     <TextView
-        android:id="@+id/result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
-        android:fontFamily="sans-serif-black"
-        android:text="38 - 2"
-        android:textColor="#142488"
-        android:textColorLink="#FFFFFF"
-        android:textIsSelectable="false"
-        android:textSize="96sp"
-        app:layout_constraintBottom_toTopOf="@+id/calcul"
+        android:id="@+id/terme"
+        android:layout_width="112dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="76dp"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.081" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
