--- a/app/src/main/res/layout/activity_calculatrice.xml
+++ b/app/src/main/res/layout/activity_calculatrice.xml
@@ -428,7 +428,7 @@
         android:layout_height="36dp"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="76dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
