Bouton Jeu 3 Menu

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,6 +105,8 @@
         android:layout_width="wrap_content"
         android:layout_height="64dp"
         android:layout_margin="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo_shadow" />
 
@@ -114,10 +116,22 @@
         android:layout_height="60dp"
         android:layout_marginTop="40dp"
         android:text="Jeu 2"
+        android:onClick="goto_jeu2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tableLayout3" />
+
+    <Button
+        android:id="@+id/button17"
+        android:layout_width="173dp"
+        android:layout_height="59dp"
+        android:text="Jeu 3"
+        android:onClick="goto_jeu3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button16" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
