--- a/app/src/main/res/layout/activity_lancement_jeu2.xml
+++ b/app/src/main/res/layout/activity_lancement_jeu2.xml
@@ -22,8 +22,8 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="278dp"
-        android:layout_height="128dp"
+        android:layout_width="313dp"
+        android:layout_height="150dp"
         android:layout_marginTop="112dp"
         android:fontFamily="sans-serif-smallcaps"
         android:text="Attention à l'explosion!"
@@ -36,13 +36,15 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonJouer"
-        android:layout_width="276dp"
-        android:layout_height="72dp"
+        android:layout_width="294dp"
+        android:layout_height="98dp"
         android:background="#F44336"
         android:backgroundTint="#F44336"
+        android:onClick="launchGame"
         android:text="À toi de jouer!"
         android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="521dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
